force-app/main/default/objects/Volunteer_Shift__c/fields/of_Volunteers_Still_Needed__c.field-meta.xml
<CustomField>
    <fullName>of_Volunteers_Still_Needed__c</fullName>
    <formula>IF((Desired_of_Volunteers__c  -  Shifts_Taken__c)&lt;=0, 0,(Desired_of_Volunteers__c  -  Shifts_Taken__c))</formula>
    <label># of Volunteers Still Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>