force-app/main/default/objects/Volunteer_Shift__c/fields/Shift_Hours__c.field-meta.xml
<CustomField>
    <fullName>Shift_Hours__c</fullName>
    <formula>FLOOR (( Shift_End_Time__c - Shift_Start_Time__c )*24)</formula>
    <label>Shift Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>