force-app/main/default/objects/Volunteer_Shift__c/validationRules/Start_before_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_before_End</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Shift_End_Time__c  &lt; Shift_Start_Time__c ,true,false)</errorConditionFormula>
    <errorMessage>No time travel allowed during volunteering! Shift Start Time must be before Shift End Time.</errorMessage>
</ValidationRule>